[gd_scene load_steps=36 format=2]

[ext_resource path="res://Core/Core.gd" type="Script" id=1]
[ext_resource path="res://Core/Hacking Screen.gd" type="Script" id=2]
[ext_resource path="res://Core/untitled(3).png" type="Texture" id=3]
[ext_resource path="res://Games/Terminal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Core/untitled(5).png" type="Texture" id=5]
[ext_resource path="res://Core/untitled(7).png" type="Texture" id=6]
[ext_resource path="res://Fonts/TCM_____.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Core/padlock.png" type="Texture" id=8]
[ext_resource path="res://Core/untitled(8).png" type="Texture" id=9]
[ext_resource path="res://Games/Pong/Opponent.gd" type="Script" id=10]
[ext_resource path="res://Games/Pong/Ball.gd" type="Script" id=11]
[ext_resource path="res://Games/Pong/Player.gd" type="Script" id=12]
[ext_resource path="res://Games/Pong/Pong.gd" type="Script" id=13]
[ext_resource path="res://Core/Microsoft Windows XP Error - Sound Effect (HD).ogg" type="AudioStream" id=14]
[ext_resource path="res://Core/9a2bc95b-e142-458a-a17f-6ba13cd22bf2_200x200.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.294118 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.282353, 0.439216, 0.541176, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 1, 0.431373, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 130 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 350, 10 )

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.45098, 0.145098, 0.0156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.176471, 0.180392, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 30 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.317647, 0.172549, 0.403922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 30 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 1, 0.431373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=14]
size = 48
outline_size = 1
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=15]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.858824 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.027451, 0.0627451, 0.109804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.282353, 0.439216, 0.541176, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.027451, 0.0666667, 0.109804, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.282353, 0.439216, 0.541176, 1 )

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=20]
size = 26
font_data = ExtResource( 7 )

[node name="Core" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 67.6205 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1254.95 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0666667, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background"]
visible = false
anchor_right = 1.0
margin_left = 87.8162
margin_top = 97.7279
margin_right = -691.184
margin_bottom = 377.728
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.282353, 0.439216, 0.541176, 1 )
text = "HACK 2020"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Background"]
anchor_right = 1.0
margin_left = 75.4853
margin_top = 370.843
margin_right = -639.515
margin_bottom = 522.843
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.282353, 0.439216, 0.541176, 1 )
custom_colors/font_outline_modulate = Color( 0, 1, 0.431373, 1 )
text = "\"2020 ELECTION IS IN DANGER YOU NEED TO HACK THE SYSTEM\""
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Background"]
anchor_right = 1.0
margin_left = 127.314
margin_top = 449.63
margin_right = -655.686
margin_bottom = 501.63
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.282353, 0.439216, 0.541176, 1 )
custom_colors/font_outline_modulate = Color( 0, 1, 0.431373, 1 )
text = "-Ye"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Background"]
anchor_right = 1.0
margin_left = 556.0
margin_top = 22.5858
margin_right = -602.0
margin_bottom = 74.5858
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.282353, 0.439216, 0.541176, 1 )
custom_colors/font_outline_modulate = Color( 0, 1, 0.431373, 1 )
text = "Progress:"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_left = 175.071
margin_top = 69.4437
margin_right = 495.071
margin_bottom = 389.444
texture = ExtResource( 15 )
expand = true

[node name="Game" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -615.0
margin_top = 90.0
margin_right = -25.0
margin_bottom = 370.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pong" type="Panel" parent="Game"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pong" type="Control" parent="Game/Pong"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="Game/Pong/Pong"]
wait_time = 2.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="Game/Pong/Pong"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0.439216, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Area2D" parent="Game/Pong/Pong"]
position = Vector2( 615, 140 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Pong/Pong/Right"]
shape = SubResource( 5 )

[node name="Left" type="Area2D" parent="Game/Pong/Pong"]
position = Vector2( -20, 140 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Pong/Pong/Left"]
shape = SubResource( 5 )

[node name="WallBottom" type="StaticBody2D" parent="Game/Pong/Pong"]
position = Vector2( 295, 290 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Game/Pong/Pong/WallBottom"]
shape = SubResource( 6 )

[node name="WallTop" type="StaticBody2D" parent="Game/Pong/Pong"]
position = Vector2( 295, -10 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Game/Pong/Pong/WallTop"]
shape = SubResource( 6 )

[node name="Ball" type="KinematicBody2D" parent="Game/Pong/Pong" groups=[
"BallGroup",
]]
position = Vector2( 295, 140 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Pong/Pong/Ball"]
shape = SubResource( 7 )

[node name="Panel" type="Panel" parent="Game/Pong/Pong/Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -11.0
margin_right = 11.0
margin_bottom = 11.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opponent" type="KinematicBody2D" parent="Game/Pong/Pong"]
position = Vector2( 575, 140 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Pong/Pong/Opponent"]
shape = SubResource( 9 )

[node name="Panel" type="Panel" parent="Game/Pong/Pong/Opponent"]
margin_left = -10.0
margin_top = -35.0
margin_right = 10.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="Game/Pong/Pong"]
position = Vector2( 20, 140 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Pong/Pong/Player"]
shape = SubResource( 11 )

[node name="ColorRect" type="Panel" parent="Game/Pong/Pong/Player"]
margin_left = -10.0
margin_top = -35.0
margin_right = 10.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Label" parent="Game/Pong/Pong"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 7.0
margin_right = 100.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Countdown"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Victory" type="Label" parent="Game/Pong/Pong"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -221.0
margin_top = -51.0
margin_right = 221.0
margin_bottom = -15.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "First to 3 points wins"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="HBoxContainer" parent="Game/Pong/Pong"]
anchor_right = 1.0
margin_left = 203.0
margin_top = 110.0
margin_right = -203.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="Game/Pong/Pong/Score"]
margin_right = 62.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="Game/Pong/Pong/Score"]
margin_left = 122.0
margin_right = 184.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="Button" parent="Game/Pong"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 164.0
margin_top = 101.0
margin_right = -165.0
margin_bottom = -101.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click To Begin"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Game/Pong/Click"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -101.0
margin_right = 146.0
margin_bottom = 101.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game2" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -616.0
margin_top = -318.0
margin_right = -24.0
margin_bottom = -12.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terminal" parent="Game2" instance=ExtResource( 4 )]

[node name="Game3" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = -107.0
margin_right = 481.0
margin_bottom = -31.0
rect_scale = Vector2( 1.00226, 1.00872 )
mouse_default_cursor_shape = 2
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="Game3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -8.0
margin_right = 33.0
margin_bottom = 31.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Game3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 6.0
margin_right = -35.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 15 )
text = "Prove that you are not a robot!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -616.0
margin_top = 14.0
margin_right = -24.0
margin_bottom = 88.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 150.0
margin_bottom = 70.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
margin_left = 90.0
margin_right = 240.0
margin_bottom = 70.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 70.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Control"]
margin_left = 270.0
margin_right = 420.0
margin_bottom = 70.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Control"]
margin_left = 360.0
margin_right = 510.0
margin_bottom = 70.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lock" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -616.0
margin_top = 88.0
margin_right = -12.0
margin_bottom = -12.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="padlock" type="TextureRect" parent="Lock"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 231.0
margin_top = 237.0
margin_right = -231.0
margin_bottom = -237.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hacking Screen" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 6.0
margin_right = -12.0
margin_bottom = -7.0
custom_styles/panel = SubResource( 17 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error1" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -179.0
margin_right = 361.0
margin_bottom = 179.0
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Error1"]
anchor_right = 1.0
margin_left = 25.0
margin_top = 16.0
margin_right = -26.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 19 )
text = "FATAL HACKING ERROR!!!1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Error1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -30.0
margin_right = 335.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 20 )
text = "ACCESS NOT ALLOWED YOUR COMPUTER WILL TERMINATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Error1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -373.0
margin_top = -185.0
margin_right = 372.0
margin_bottom = 185.0
color = Color( 1, 1, 1, 0 )

[node name="Error2" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.368
margin_top = -41.093
margin_right = 616.632
margin_bottom = 316.907
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Error2"]
anchor_right = 1.0
margin_left = 25.0
margin_top = 16.0
margin_right = -26.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 19 )
text = "FATAL HACKING ERROR!!!1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Error2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -30.0
margin_right = 335.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 20 )
text = "ACCESS NOT ALLOWED YOUR COMPUTER WILL TERMINATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.5669
margin_top = 26.1534
margin_right = -12.5669
margin_bottom = 76.1534
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 20.0
[connection signal="pressed" from="Game" to="Hacking Screen" method="_on_Game_pressed" binds= [ "Pong" ]]
[connection signal="timeout" from="Game/Pong/Pong/CountdownTimer" to="Game/Pong/Pong" method="_on_CountdownTimer_timeout"]
[connection signal="body_entered" from="Game/Pong/Pong/Right" to="Game/Pong/Pong" method="_on_Right_body_entered"]
[connection signal="body_entered" from="Game/Pong/Pong/Left" to="Game/Pong/Pong" method="_on_Left_body_entered"]
[connection signal="pressed" from="Game/Pong/Click" to="Game/Pong/Pong" method="_on_Click_pressed"]
[connection signal="pressed" from="Game3" to="Hacking Screen" method="_on_Game_pressed" binds= [ "Captcha" ]]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="Game2/Terminal" method="_on_AudioStreamPlayer_finished"]
